Bugfix on image not showing up

--- a/pages/dynamic/assets/css/style.css
+++ b/pages/dynamic/assets/css/style.css
@@ -428,7 +428,7 @@
   {
     background-color: #000000;
     animation: fade 2s;
-    background-image: url('/assets/img/death.png');
+    background-image: url('assets/img/death.png');
     background-size: 21em;
   }
 
